@@ -1,4 +1,8 @@
 2005-10-05:
+	* src/session.c: suppress duplicate success messages.
+	* src/stash.c: warn on shmem failures.
+
+2005-10-05:
 	* src/shmem.c: always detach from the segment, even in error cases.
 	* src/stash.c: note when we manipulate shared memory when debugging.
 
